overflow issue solved

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,26 +36,27 @@ header .nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 .nav .mobile-menu{
     display: none;
-    width: 100%;
-    height: 100%;
+    width: 110%;
+    height: 100vh;
     background: #FFFFFF;
     position: absolute;
-    top: 0;
+    top: -20%;
     right: 0;
-    left: 0;
-    transform: translateX(100%);
+    left: -5%;
+    margin-left: 15%;
     transition: all 1s ease-in-out;
 }
 .overlay{
-    width: 100%;
-    height: 100%;
+    width: 110%;
+    height: 100vh;
     background: #8f8787;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -20%;
+    left:-10%;
     z-index: 1;
     opacity: 80%;
     display: none;
@@ -484,6 +485,7 @@ header .nav{
     padding: 80px 20px;
     z-index: 30;
     transform: translateX(100%);
+    overflow-x: hidden;
 }
 .menu-btn{
     display: block;
